@@ -1,3 +1,11 @@
+2009-07-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/random.c (DestroyMagickRandomGenerator): Cleanup thread
+	specific random kernel data.
+
+	* magick/tsd.c (MagickTsdKeyCreate): Fix glitch when built without
+	any threads support.
+
 2009-07-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* www/benchmarks.rst: Update GraphicsMagick vs ImageMagick image
